--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,9 @@
+cloud.name=drpyvuhac
+cloud.secret=3VyCvIYi4jt6HTSazwg9cT4BwpY
+cloud.key=548364542977318
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
 spring.jpa.hibernate.ddl-auto=create
 spring.datasource.url=jdbc:h2:mem:testdb
+
 
